Table "data" {
  "etag" VARCHAR(200) [pk, not null, unique, note: '''
  ETag representing this data being unique. Used for updating cache.
  ''']
  "generated_at" TIMESTAMP [not null, note: '''
  Date this data is generated at.
  ''']
  "checksum" VARCHAR(200) [not null, note: '''
  Checksum to validate when fetching dump source.
  ''']
  "target_type" VARCHAR(20) [not null, note: '''
  Type of data. Referred as artists, labels, masters, release.
  Always uppercase.
  ''']
  "uri" VARCHAR(2048) [not null, note: '''
  URI to download dump data file.
  ''']
  note: '''
  Cached resource for keep tracking data dump updates (either being monthly or random occations)
  '''
}

Table "style" {
  "id" INTEGER [pk, not null, increment, note: "id of style"]
  "name" VARCHAR(50) [not null, unique, note: "name of style"]
  Indexes {
    id [name: "pk_style"]
  }
}

Table "genre" {
  "id" INTEGER [pk, not null, increment, note: "id of genre"]
  "name" VARCHAR(50) [not null, unique, note: "name of genre"]
}

Table "artist" {
  "id" INTEGER [pk, not null]
  "data_quality" VARCHAR(100)
  "name" VARCHAR(1000)
  "profile" TEXT
  "real_name" VARCHAR(2000)
}

Table "label" {
  "id" INTEGER [pk, not null]
  "contact_info" TEXT
  "data_quality" VARCHAR(100)
  "name" VARCHAR(300)
  "profile" TEXT
  "parent_id" INTEGER
}

Table "master" {
  "id" INTEGER [pk, not null]
  "data_quality" VARCHAR(100)
  "title" VARCHAR(2000)
  "released_year" SMALLINT
}

Table "release" {
  "id" INTEGER [pk, not null]
  "title" VARCHAR(10000)
  "country" VARCHAR(100)
  "data_quality" VARCHAR(100)
  "released_year" SMALLINT
  "released_month" SMALLINT
  "released_day" SMALLINT
  "listed_release_date" VARCHAR(255) 
  "master_id"  INTEGER [note: "id of master release this release belongs to"]
  "is_master" BOOLEAN [note: "indicates i this release is main release of the master release"]
  "notes" TEXT
  "status" VARCHAR(255)
}

Table "release_genre" {
  "release_id" INTEGER [not null]
  "genre_id" INTEGER [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (release_id, genre_id) [pk]
  }
}

Table "release_track" {
  "release_id" INTEGER [not null]
  "duration" VARCHAR(1500)
  "position" VARCHAR(1500)
  "title" VARCHAR(10000)
  "title_hash" BIGINT [not null, note: "fnv32 encoded hash from title"]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (release_id, title_hash) [pk]
  }
}

Table "label_release" {
  "label_id" INTEGER [not null]
  "release_id" INTEGER [not null]
  "category_notation" VARCHAR(1000)
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (label_id, release_id) [pk]
  }
}

Table "release_image" {
  "release_id" INTEGER [not null]
  "url_hash" BIGINT [not null, note: "fnv32 encoded hash from url"]
  "url" VARCHAR(2048) [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (release_id, url_hash) [pk]
  }
}

Table "release_contract" {
  "release_id" INTEGER [not null]
  "label_id" INTEGER [not null]
  "contract_hash" BIGINT [not null, note: "fnv32 encoded hash from contract"]
  "contract" VARCHAR(5000) [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (release_id, label_id, contract_hash) [pk]
  }
}

Table "release_identifier" {
  "release_id" INTEGER [not null]
  "description" TEXT
  "type" VARCHAR(2500)
  "value" TEXT
  "identifier_hash" BIGINT [not null, note: "fnv32 encoded hash from string which is description, type, value appended in order"]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (release_id, identifier_hash) [pk]
  }
}

Table "master_track" {
  "master_id" INTEGER [not null]
  "duration" VARCHAR(1500)
  "position" VARCHAR(1500)
  "title" VARCHAR(10000)
  "title_hash" BIGINT [not null, note: "fnv32 encoded hash from title"]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (master_id, title_hash) [pk]
  }
}

Table "master_video" {
  "master_id" INTEGER [not null]
  "url_hash" BIGINT [not null, note: "fnv32 encoded hash from url"]
  "url" VARCHAR(2048) [not null]
  "description" VARCHAR(4000)
  "title" VARCHAR(1000)
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (master_id, url_hash) [pk]
  }
}

Table "master_genre" {
  "master_id" INTEGER [not null]
  "genre_id" INTEGER [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (master_id, genre_id) [pk]
  }
}

Table "master_style" {
  "master_id" INTEGER [not null]
  "style_id" INTEGER [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (master_id, style_id) [pk]
  }
}

Table "release_style" {
  "release_id" INTEGER [not null]
  "style_id" INTEGER [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (release_id, style_id) [pk]
  }
}

Table "release_video" {
  "release_id" INTEGER [not null]
  "description" VARCHAR(4000)
  "title" VARCHAR(1000)
  "url" VARCHAR(2048) [not null]
  "url_hash" BIGINT [not null, note: "fnv32 encoded hash from url"]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (release_id, url_hash) [pk]
  }  
}

Table "label_url" {
  "label_id" INTEGER [not null]
  "url_hash" BIGINT [not null, note: "fnv32 encoded hash from url"]
  "url" VARCHAR(2048) [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (label_id, url_hash) [pk]
  }
}

Table "release_format" {
  "release_id" INTEGER [not null]
  "description" VARCHAR(10000)
  "name" VARCHAR(255)
  "quantity" INTEGER
  "text" VARCHAR(5000)
  "format_hash" BIGINT [not null, note: "fnv32 encoded hash from string which is description, name, quantity, text appended in order"]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (release_id, format_hash) [pk]
  }
}

Table "artist_alias" {
  "artist_id" INTEGER [not null]
  "alias_id" INTEGER [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (artist_id, alias_id) [pk]
  }
}

Table "artist_name_variation" {
  "artist_id" INTEGER [not null, note: "id of artist"]
  "name_variation" VARCHAR(2000) [not null, note: "artist's other name"]
  "name_variation_hash" BIGINT [not null, note: "fnv32 encoded hash from name_variation"]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
  Indexes {
    (artist_id, name_variation_hash) [pk]
  }
}

Table "master_artist" {
  "artist_id" INTEGER [not null, note: "artist id of the master release"]
  "master_id" INTEGER [not null, note: "master id"]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
Indexes {
  (artist_id, master_id) [pk]
}
}

Table "release_artist" {
  "release_id" INTEGER [not null]
  "artist_id" INTEGER [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
Indexes {
  (release_id, artist_id) [pk]
}
}

Table "release_credited_artist" {
  "release_id" INTEGER [not null]
  "artist_id" INTEGER [not null]
  "role_hash" BIGINT [not null, note: "fnv32 encoded hash from role"]
  "role" VARCHAR(10000) [note: "role of an artist for a release"]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
Indexes {
  (release_id, artist_id, role_hash) [pk]
}
}

Table "artist_url" {
  "artist_id" INTEGER [not null]
  "url_hash" BIGINT [not null, note: "fnv32 encoded hash from url"]
  "url" VARCHAR(2048) [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
Indexes {
  (artist_id, url_hash) [pk]
}
}

Table "artist_group" {
  "artist_id" INTEGER [not null]
  "group_id" INTEGER [not null]
  "updated_at" TIMESTAMP [not null, note: "created time", default: `NOW()`]
Indexes {
  (artist_id, group_id) [pk]
}
}

Ref "fk_label_parent_id_label_id":"label"."id" < "label"."parent_id"

Ref "fk_release_genre_release_id_release":"release"."id" < "release_genre"."release_id"

Ref "fk_release_genre_genre_id_genre":"genre"."id" < "release_genre"."genre_id"

Ref "fk_release_track_release_id_release":"release"."id" < "release_track"."release_id"

Ref "fk_label_release_label_id_label":"label"."id" < "label_release"."label_id"

Ref "fk_label_release_release_id_release":"release"."id" < "label_release"."release_id"

Ref "fk_release_image_release_id_release":"release"."id" < "release_image"."release_id"

Ref "fk_release_contract_release_id_release":"release"."id" < "release_contract"."release_id"

Ref "fk_release_contract_label_id_label":"label"."id" < "release_contract"."label_id"

Ref "fk_release_identifier_release_id_release":"release"."id" < "release_identifier"."release_id"

Ref "fk_master_video_master_id_master":"master"."id" < "master_video"."master_id"

Ref "fk_master_genre_master_id_master":"master"."id" < "master_genre"."master_id"

Ref "fk_master_genre_genre_id_genre":"genre"."id" < "master_genre"."genre_id"

Ref "fk_master_style_master_id_master":"master"."id" < "master_style"."master_id"

Ref "fk_master_style_style_id_style":"style"."id" < "master_style"."style_id"

Ref "fk_release_style_release_id_release":"release"."id" < "release_style"."release_id"

Ref "fk_release_style_style_id_style":"style"."id" < "release_style"."style_id"

Ref "fk_release_video_release_id_release":"release"."id" < "release_video"."release_id"

Ref "fk_label_url_label_id_label":"label"."id" < "label_url"."label_id"

Ref "fk_release_format_release_id_release":"release"."id" < "release_format"."release_id"

Ref "fk_artist_alias_artist_id_artist":"artist"."id" < "artist_alias"."artist_id"

Ref "fk_artist_alias_alias_id_artist":"artist"."id" < "artist_alias"."alias_id"

Ref "fk_artist_name_variation_artist_id_artist":"artist"."id" < "artist_name_variation"."artist_id"

Ref "fk_master_artist_artist_id_artist":"artist"."id" < "master_artist"."artist_id"

Ref "fk_master_artist_master_id_master":"master"."id" < "master_artist"."master_id"

Ref "fk_release_artist_release_id_release":"release"."id" < "release_artist"."release_id"

Ref "fk_release_artist_artist_id_artist":"artist"."id" < "release_artist"."artist_id"

Ref "fk_release_credited_artist_release_id_release":"release"."id" < "release_credited_artist"."release_id"

Ref "fk_release_credited_artist_artist_id_artist":"artist"."id" < "release_credited_artist"."artist_id"

Ref "fk_artist_url_artist_id_artist":"artist"."id" < "artist_url"."artist_id"

Ref "fk_artist_group_artist_id_artist":"artist"."id" < "artist_group"."artist_id"

Ref "fk_artist_group_group_id_artist":"artist"."id" < "artist_group"."group_id"

Ref "fk_release_master_id_master":"master"."id" < "release"."master_id"